# colorSelector

./: .gitignore  CMakeLists.txt  README  README.md
doc/: ColorSelector.mmap  readme.md
include/utility/: color.h  gradient.h  scheme.h
include/utiltiy/: color.h  gradient.h
src/: main.cpp
src/UI/: colorblockwidget.cpp  colorblockwidget.h  colormosaicbar.cpp  colormosaicbar.h  colorrampwidget.cpp  colorrampwidget.h  colorschemebar.cpp  colorschemebar.h  colorselectcombobox.cpp  colorselectcombobox.h
src/UI/coloreditor/: coloreditor.cpp  coloreditor.h  coloreditor.ui  colorslider.cpp  colorslider.h  colorslidergroove.h
src/UI/model/: hsvcomboxdelegate.cpp  hsvcomboxdelegate.h  hsvcomboxmodel.cpp  hsvcomboxmodel.h
src/core/: gradient.h  scheme.h
src/core/gradient/: randomgradient.cpp
src/core/scheme/: multicolorscheme.cpp
src/utility/: color.cpp  lineargradient.cpp  randomcolorscheme.cpp
src/utiltiy/: blockgradient.cpp  color.cpp  randomcolorscheme.cpp
